--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "TJMC-Launcher",
+  "name": "tjmc-launcher",
   "version": "1.0.0",
-  "description": "An ElectronJS version of TJM-Launcher",
+  "description": "An ElectronJS version if TJM-Launcher",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "test": "electron ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MakAndJo/TJMC-Launcher.git"
-  },
-  "keywords": [],
+  "keywords": [
+    "Minecraft",
+    "Launcher"
+  ],
   "author": "MakAndJo",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MakAndJo/TJMC-Launcher/issues"
-  },
-  "homepage": "https://github.com/MakAndJo/TJMC-Launcher#readme",
-  "devDependencies": {
-    "electron": "^11.0.3"
+  "dependencies": {
+    "electron": "^11.1.0"
   }
 }
