--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "ejs-electron": "^2.1.1",
-    "electron": "^11.1.0"
+    "electron": "^11.1.0",
+    "jquery": "^3.5.1"
   }
 }
