--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An ElectronJS version if TJM-Launcher",
   "main": "index.js",
   "scripts": {
-    "test": "electron ."
+    "test": "electron . --enable-transparent-visuals --disable-gpu"
   },
   "keywords": [
     "Minecraft",
