--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.5",
     "ejs-electron": "^2.1.1",
     "electron": "^11.1.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "request": "^2.88.2"
   }
 }
