--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "MakAndJo",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.1",
+    "checksum": "^0.1.1",
     "ejs": "^3.1.5",
     "ejs-electron": "^2.1.1",
     "electron": "^11.1.0",
