--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "checksum": "^0.1.1",
     "ejs": "^3.1.5",
     "ejs-electron": "^2.1.1",
-    "electron": "^11.1.0",
     "jquery": "^3.5.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "electron": "^11.1.0"
   }
 }
