--- a/.gitignore
+++ b/.gitignore
@@ -151,5 +151,13 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-.vscode/
-.DS_Store
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
