--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "electron": "^11.1.0",
-    "electron-packager": "^15.2.0"
+    "electron-builder": "^22.9.1"
   },
   "build": {
     "appId": "com.trinityinfosystem.electron.exchange.stream",
