--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "checksum": "^0.1.1",
     "ejs": "^3.1.5",
     "ejs-electron": "^2.1.1",
+    "fs-extra": "^9.1.0",
     "jquery": "^3.5.1",
     "request": "^2.88.2"
   },
