--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ejs-electron": "^2.1.1",
     "fs-extra": "^9.1.0",
     "jquery": "^3.5.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ws": "^7.4.6"
   },
   "devDependencies": {
     "electron": "^13.1.0",
