--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/MakAndJo/TJMC-Launcher.git"
   },
   "dependencies": {
+    "@electron/remote": "^1.1.0",
     "adm-zip": "^0.5.1",
     "checksum": "^0.1.1",
     "ejs": "^3.1.5",
