--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "keywords": [
     "Minecraft",
-    "Launcher"
+    "Launcher",
+    "TJMCRAFT",
+    "TJMC",
+    "TJMC-Launcher",
+    "ТюменьCraft"
   ],
   "author": "MakAndJo",
   "license": "ISC",
@@ -24,12 +28,9 @@
     "@electron/remote": "^1.1.0",
     "adm-zip": "^0.5.1",
     "checksum": "^0.1.1",
-    "ejs": "^3.1.5",
-    "ejs-electron": "^2.1.1",
     "electron": "^13.1.2",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
-    "jquery": "^3.5.1",
     "request": "^2.88.2",
     "ws": "^7.4.6"
   },
