--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tjmc-launcher",
   "version": "1.0.0",
   "description": "An ElectronJS version if TJM-Launcher",
-  "main": "index.js",
+  "main": "src/main/main.js",
   "scripts": {
     "test": "electron .",
     "dist": "node build.js",
@@ -25,15 +25,15 @@
     "url": "https://github.com/MakAndJo/TJMC-Launcher.git"
   },
   "dependencies": {
-    "@electron/remote": "^1.1.0",
+    "@electron/remote": "^1.2.0",
     "adm-zip": "^0.5.1",
-    "electron": "^13.1.2",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "request": "^2.88.2",
-    "ws": "^7.4.6"
+    "ws": "^7.5.1"
   },
   "devDependencies": {
+    "electron": "^13.1.5",
     "electron-builder": "^22.11.7"
   }
 }
