--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder build",
-    "dist:win": "npm run dist -- -w",
-    "dist:mac": "npm run dist -- -m",
-    "dist:linux": "npm run dist -- -l"
+    "build": "electron-builder build",
+    "build:win": "npm run build -- -w",
+    "build:mac": "npm run build -- -m",
+    "build:linux": "npm run build -- -l"
   },
   "keywords": [
     "Minecraft",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@electron/remote": "^1.2.0",
     "adm-zip": "^0.5.1",
+    "electron-updater": "^4.3.9",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "request": "^2.88.2",
