--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "tjmc-launcher",
-  "version": "1.0.0",
+  "version": "0.0.5",
   "description": "An ElectronJS version if TJM-Launcher",
   "main": "src/main/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder build",
+    "build": "electron-builder build --publish never",
     "build:win": "npm run build -- -w",
     "build:mac": "npm run build -- -m",
-    "build:linux": "npm run build -- -l"
+    "build:linux": "npm run build -- -l",
+    "deploy": "electron-builder build --publish always",
+    "deploy:win": "npm run deploy -- -w"
   },
   "keywords": [
     "Minecraft",
@@ -31,7 +33,8 @@
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "request": "^2.88.2",
-    "ws": "^7.5.1"
+    "ws": "^7.5.1",
+    "dotenv": "^9.0.2"
   },
   "devDependencies": {
     "electron": "^13.1.5",
