--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tjmc-launcher",
   "version": "0.1.26",
-  "description": "An ElectronJS version if TJM-Launcher",
-  "main": "src/main/main.js",
+  "description": "An Electron.js version of TJM-Launcher",
+  "main": "/src/main/main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder build --publish never",
