--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tjmc-launcher",
   "version": "0.1.26",
   "description": "An Electron.js version of TJM-Launcher",
-  "main": "/src/main/main.js",
+  "main": "src/main/main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder build --publish never",
