--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "mac": {
       "target": [
         {
-          "target": "dmg",
+          "target": "default",
           "arch": [
             "x64",
             "arm64"
