Update windows build target

--- a/package.json
+++ b/package.json
@@ -77,7 +77,15 @@
       "category": "public.app-category.games"
     },
     "win": {
-      "target": "nsis"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
     },
     "linux": {
       "target": "AppImage",
