--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "compile-hero.disable-compile-files-on-did-save-code": true,
-    "rpc.enabled": false
+    "rpc.enabled": false,
+    "cSpell.words": [
+        "asar",
+        "nsis"
+    ]
 }
