--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tjmc-launcher",
-  "version": "0.1.75",
+  "version": "0.1.76",
   "description": "An Electron.js version of TJM-Launcher",
   "main": "src/main/main.js",
   "scripts": {
@@ -92,19 +92,33 @@
       "target": [
         {
           "target": "AppImage",
-          "arch": ["x64", "arm64", "armv7l"]
+          "arch": [
+            "x64",
+            "arm64",
+            "armv7l"
+          ]
         },
         {
           "target": "deb",
-          "arch": ["x64", "armv7l"]
+          "arch": [
+            "x64",
+            "armv7l"
+          ]
         },
         {
           "target": "rpm",
-          "arch": ["x64", "armv7l"]
+          "arch": [
+            "x64",
+            "armv7l"
+          ]
         },
         {
           "target": "tar.gz",
-          "arch": ["x64", "arm64", "armv7l"]
+          "arch": [
+            "x64",
+            "arm64",
+            "armv7l"
+          ]
         }
       ],
       "synopsis": "TJMC-Launcher",
