--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "electron . --trace-warnings --unhandled-rejections=strict",
-    "build": "electron-builder build --publish never",
+    "build": "electron-builder build --publish onTagOrDraft",
     "build:win": "npm run build -- -w",
     "build:mac": "npm run build -- -m",
     "build:linux": "npm run build -- -l",
