--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
           "target": "nsis",
           "arch": [
             "x64",
-            "ia32"
+            "arm64"
           ]
         }
       ],
