[upd] remove unused arch

--- a/package.json
+++ b/package.json
@@ -94,30 +94,26 @@
           "target": "AppImage",
           "arch": [
             "x64",
-            "arm64",
-            "armv7l"
+            "arm64"
           ]
         },
         {
           "target": "deb",
           "arch": [
-            "x64",
-            "armv7l"
+            "x64", "arm64"
           ]
         },
         {
           "target": "rpm",
           "arch": [
-            "x64",
-            "armv7l"
+            "x64", "arm64"
           ]
         },
         {
           "target": "tar.gz",
           "arch": [
             "x64",
-            "arm64",
-            "armv7l"
+            "arm64"
           ]
         }
       ],
