--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tjmc-launcher",
-  "version": "0.1.80",
+  "version": "0.1.81",
   "description": "An lightweight minecraft launcher by TJMC",
   "main": "src/main/main.js",
   "scripts": {
@@ -123,7 +123,9 @@
     "snap": {
       "publish": {
         "provider": "snapStore",
-        "channels": ["stable"]
+        "channels": [
+          "stable"
+        ]
       },
       "grade": "stable"
     },
