--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "electron-updater": "^4.6.5",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
+    "got": "^11.8.3",
     "md5": "^2.3.0",
     "request": "^2.88.2",
     "ws": "^7.5.1"
