--- a/package.json
+++ b/package.json
@@ -120,7 +120,9 @@
         "Name": "TJMC-Launcher",
         "Type": "Application",
         "StartupNotify": true,
-        "Categories": "Game"
+        "Categories": "Game",
+        "Encoding": "UTF-8",
+        "MimeType": "x-scheme-handler/tjmc"
       },
       "icon": "build/icons"
     },
