--- a/package.json
+++ b/package.json
@@ -49,10 +49,6 @@
     "ws": "^7.5.1"
   },
   "devDependencies": {
-    "electron": "^19.0.8",
-    "electron-builder": "^23.1.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.14.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
@@ -71,6 +67,8 @@
     "copy-webpack-plugin": "^9.0.1",
     "cors": "^2.8.5",
     "css-loader": "^6.3.0",
+    "electron": "^19.0.8",
+    "electron-builder": "^23.1.0",
     "eslint": "^8.32.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-react": "^7.32.1",
@@ -82,11 +80,16 @@
     "mini-css-extract-plugin": "^2.3.0",
     "mysql2": "^2.3.3",
     "preact": "^10.11.3",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
+    "source-map": "^0.7.4",
     "style-loader": "^3.3.0",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.2.4",
     "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-plugin-buildinfo": "^0.3.1"
   },
   "build": {
