--- a/src/render/jsconfig.json
+++ b/src/render/jsconfig.json
@@ -10,6 +10,9 @@
         "jsx": "react-jsx",
         "baseUrl": ".",
         "skipLibCheck": true,
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "paths": {
             "Libs/*": ["Libs/*"],
             "Util/*": ["Util/*"],
