Fix global linting

--- a/src/render/.eslintrc.json
+++ b/src/render/.eslintrc.json
@@ -8,6 +8,9 @@
         "preact"
         // "plugin:react/recommended"
     ],
+    "globals": {
+        "window": true
+    },
     "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
