--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^29.4.1",
     "mini-css-extract-plugin": "^2.3.0",
     "mysql2": "^2.3.3",
+    "platform": "^1.3.6",
     "preact": "^10.11.3",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
