--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "preact": "^10.11.3",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
+    "react-markdown": "^8.0.5",
     "source-map": "^0.7.4",
     "style-loader": "^3.3.0",
     "svg-inline-loader": "^0.8.2",
