--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "прелоадер",
         "asar",
         "loggerutil",
+        "msort",
+        "natsort",
         "nsis",
         "realname"
     ],
