--- a/src/render/.eslintrc.json
+++ b/src/render/.eslintrc.json
@@ -41,6 +41,7 @@
         ],
         "prefer-destructuring": "off",
         "react/jsx-uses-react": "error",
-        "react/jsx-uses-vars": "error"
+        "react/jsx-uses-vars": "error",
+        "quote-props": ["warn", "as-needed"]
     }
 }
