--- a/src/render/.eslintrc.json
+++ b/src/render/.eslintrc.json
@@ -42,6 +42,7 @@
         "prefer-destructuring": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
-        "quote-props": ["warn", "as-needed"]
+        "quote-props": ["warn", "as-needed"],
+        "object-shorthand": ["warn", "methods"]
     }
 }
