--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "mini-css-extract-plugin": "^2.3.0",
     "mysql2": "^2.3.3",
     "platform": "^1.3.6",
-    "preact": "^10.11.3",
+    "preact": "10.12.1",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-markdown": "^8.0.5",
