--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "electron-updater": "^4.6.5",
     "fs-extra": "^9.1.0",
     "got": "^11.8.3",
+    "keytar": "^7.9.0",
     "md5": "^2.3.0",
     "ws": "^7.5.1"
   },
