Added storing and loading to keytar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "похуй",
         "прелоадер",
         "asar",
+        "keytar",
         "loggerutil",
         "msort",
         "natsort",
