Added new word ignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "похуй",
         "прелоадер",
         "asar",
+        "icns",
         "keytar",
         "loggerutil",
         "msort",
