Remove redundant polyfill

--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@babel/plugin-proposal-throw-expressions": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
     "@svgr/webpack": "^6.2.1",
     "@tjmcraft/greentree": "^0.0.67",
@@ -142,7 +141,9 @@
           ]
         }
       ],
-      "asarUnpack": ["**/*.node"],
+      "asarUnpack": [
+        "**/*.node"
+      ],
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
       "entitlements": "build/entitlements.mac.plist",
