Fix createElement warnings

--- a/src/render/jsconfig.json
+++ b/src/render/jsconfig.json
@@ -1,13 +1,17 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "CommonJS",
         "target": "es6",
         "sourceMap": true,
         "noImplicitAny": false,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "esModuleInterop": true,
         "checkJs": true,
-        "jsx": "react-jsx",
+        "jsx": "react",
+        "jsxFactory": "createElement",
+        "jsxFragmentFactory": "Fragment",
         "baseUrl": ".",
         "skipLibCheck": true,
         "strict": false,
