--- a/src/render/.eslintrc.json
+++ b/src/render/.eslintrc.json
@@ -31,6 +31,7 @@
         "no-continue": "off",
         "no-undef": "off",
         "no-unused-vars": "off",
+        "no-constant-condition": "off",
         "default-case": "off",
         "no-param-reassign": "off",
         "no-prototype-builtins": "off",
