--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "build:linux": "npm run build -- -l",
     "build:linux-snap": "electron-builder --linux snap",
     "build:multi": "npm run build -- -mwl",
-    "serve-render:dev": "cross-env NODE_ENV=development webpack serve --mode development",
-    "watch-render:dev": "cross-env NODE_ENV=development webpack --mode development --watch --stats-error-details",
-    "build-render:dev": "cross-env NODE_ENV=development webpack --mode development --stats-error-details",
-    "build-render:prod": "cross-env NODE_ENV=production webpack --mode production",
+    "build-render:dev": "cross-env NODE_ENV=development webpack --config=src/renderer/webpack.config.js --mode development --stats-error-details",
+    "watch-render:dev": "npm run build-render:dev -- --watch",
+    "build-render:prod": "cross-env NODE_ENV=production webpack --config=src/renderer/webpack.config.js --mode production",
     "deploy": "electron-builder build --publish always",
     "deploy:win": "npm run deploy -- -w",
     "deploy:mac": "npm run deploy -- -m",
