Build tasks fix

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "tsc",
     "watch": "tsc -w",
     "start": "npm run compile && electron . --trace-warnings --unhandled-rejections=strict",
-    "build": "electron-builder build --publish never",
+    "build": "npm run build-render:dev && npm run compile && electron-builder build --publish never",
     "build:win": "npm run build -- -w",
     "build:mac": "npm run build -- -m",
     "build:linux": "npm run build -- -l",
@@ -16,7 +16,7 @@
     "build-render:dev": "cross-env NODE_ENV=development webpack --config=src/renderer/webpack.config.js --mode development --stats-error-details",
     "watch-render:dev": "npm run build-render:dev -- --watch",
     "build-render:prod": "cross-env NODE_ENV=production webpack --config=src/renderer/webpack.config.js --mode production",
-    "deploy": "electron-builder build --publish always",
+    "deploy": "npm run build-render:prod && electron-builder build --publish always",
     "deploy:win": "npm run deploy -- -w",
     "deploy:mac": "npm run deploy -- -m",
     "deploy:linux": "npm run deploy -- -l",
