--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -1,4 +1,4 @@
-name: Build/release
+name: Build Electron
 
 on: push
 
@@ -17,8 +17,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
-
-    - name: Build
-      run: |
-        npm install
-        npm run build
+        
+    - name: Build Electron app
+      uses: tjmcraft/action-electron-builder@v1
+      with:
+        github_token: ${{ secrets.gh_token }}
+        build_script_name: build-render:prod
+        release: ${{ startsWith(github.ref, 'refs/tags/v') }}
